--- a/js/pages/home.hbs
+++ b/js/pages/home.hbs
@@ -1,5 +1,5 @@
 <div class="c-video">
-    <video class="c-video__film" preload="auto" autoplay loop>
+    <video class="c-video__film" preload="auto" autoplay muted loop>
       <source src="assets/talain-intro-small.mp4" type="video/mp4">
       Your browser does not support HTML5 video.
     </video>
