Created about and contact pages.

--- a/js/pages/contact.hbs
+++ b/js/pages/contact.hbs
@@ -1,1 +1,13 @@
-Contact!
+<form class="c-form" action="https://formspree.io/achloecollier@gmail.com"
+      method="POST">
+    <label class="c-form__label">Your Name:
+        <input class="c-form__field" type="text" name="name">
+    </label>
+    <label class="c-form__label">Your Email:
+        <input class="c-form__field" type="email" name="email">
+    </label>
+    <label class="c-form__label">Your Message:
+        <textarea class="c-form__field u-textarea-height" name="message"></textarea>
+    </label>
+    <input class="c-form__submit" type="submit" value="Send">
+</form>
