--- a/css/styles.css
+++ b/css/styles.css
@@ -10,26 +10,73 @@ body {
     font-family: 'Heebo', sans-serif;
     color: #C9C4B8;
     display: grid;
-    grid-template-rows: 120px 1fr 110px;
+    grid-template-rows: 85px 1fr 108px;
 }
 
 .c-header {
     grid-row: 1;
 }
 
-.c-main {
-    min-height: 545px;
+.c-about {
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 20px;
+    line-height: 32px;
+    font-size: 18px;
+    font-weight: lighter;
 }
 
 .c-video {
     overflow: hidden;
-    display: block;
-    height: 545px;
+    height: 470px;
+    position: relative;
 }
 
 .c-video__film {
+    object-fit: cover;
+    height: 100vh;
     margin-top: -75px;
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    min-height: 50%;
+    z-index: -1;
+    transform: translateX(-50%);
+}
+
+
+
+.c-form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding-top: 35px;
+}
+
+.c-form__label {
+    font-size: 18px;
+    font-weight: lighter;
+}
+
+.c-form__field {
+    width: 100%;
+    margin: 10px 0 25px;
+    padding: 8px;
+    border: transparent;
+    background-color: #d3d3d3;
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+.c-form__submit {
+    width: 100px;
+    margin: 0 auto;
+    display: block;
+    background-color: #FFE8D4;
+    border: transparent;
+    font-size: 16px;
+    padding: 8px;
+    border-radius: 50px;
 }
 
 .c-content {
@@ -74,7 +121,7 @@ body {
 
 /***** Typography *****/
 .t1 {
-    font-size: 56px;
+    font-size: 38px;
     transform: scale(1,1.6);
 }
 
@@ -86,4 +133,36 @@ body {
 
 .u-clickable {
     cursor: pointer;
+}
+
+.u-textarea-height {
+    height: 150px;
+}
+
+@media screen and (min-width: 1900px) {
+    body {
+        grid-template-rows: 120px 1fr 120px;
+    }
+
+    .c-video {
+        height: 815px;
+    }
+
+    .c-video__film {
+        margin-top: -120px;
+    }
+}
+
+@media screen and (min-width: 550px) {
+    body {
+        grid-template-rows: 120px 1fr 60px;
+    }
+
+    .t1 {
+        font-size: 56px;
+    }
+
+    .c-video {
+        height: 505px;
+    }
 }
