Changed email to talains

--- a/js/pages/contact.hbs
+++ b/js/pages/contact.hbs
@@ -1,4 +1,4 @@
-<form class="c-form" action="https://formspree.io/achloecollier@gmail.com"
+<form class="c-form" action="https://formspree.io/talainrayne@live.com"
       method="POST">
     <label class="c-form__label">Your Name:
         <input class="c-form__field" type="text" name="name">
