--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Futura';
+    src: url('/Futura.ttf');
+    src: url('/Futura.ttf') format('truetype'),
+    font-weight: normal;
+    font-style: normal;
+}
+
 body,
 html {
     margin: 0;
@@ -37,15 +45,7 @@ body {
     height: 100vh;
     margin-top: -75px;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    min-height: 50%;
-    z-index: -1;
-    transform: translateX(-50%);
 }
-
-
 
 .c-form {
     max-width: 400px;
@@ -106,13 +106,13 @@ body {
 }
 
 .t-hind-font {
-    font-family: 'Hind', sans-serif;
+    font-family: 'Futura', 'Hind', sans-serif;
     text-transform: uppercase;
 }
 
 .t-fade {
     color: #C9C4B8;
-    animation: fadeIn 12s ease-in; 
+    animation: fadeIn 7s ease-in; 
 }
 
 @keyframes fadeIn {
@@ -140,20 +140,6 @@ body {
     height: 150px;
 }
 
-@media screen and (min-width: 1900px) {
-    body {
-        grid-template-rows: 120px 1fr 120px;
-    }
-
-    .c-video {
-        height: 815px;
-    }
-
-    .c-video__film {
-        margin-top: -120px;
-    }
-}
-
 @media screen and (min-width: 550px) {
     body {
         grid-template-rows: 120px 1fr 60px;
@@ -177,3 +163,33 @@ body {
         padding: 20px 0 0 0 ;
     }
 }
+
+@media screen and (min-width: 1350px) {
+    body {
+        grid-template-rows: 120px 1fr 85px;
+    }
+
+    .c-video {
+        height: 685px;
+    }
+
+    .c-video__film {
+        margin-top: -120px;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    body {
+        grid-template-rows: 120px 1fr 120px;
+    }
+
+    .c-video {
+        height: 815px;
+    }
+
+    .c-video__film {
+        margin-top: -120px;
+    }
+}
+
+
