--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,12 @@ body {
     grid-row: 3;
 }
 
+.c-svg {
+    display: block;
+    padding-top: 20px;
+    margin: 0 auto;
+}
+
 /***** Theme *****/
 .t-center-content,
 .t-center-footer {
@@ -97,7 +103,7 @@ body {
 .t-center-content {
     justify-content: center;
     align-items: flex-end;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
 }
 
 .t-center-footer {
@@ -108,6 +114,8 @@ body {
 .t-hind-font {
     font-family: 'Futura', 'Hind', sans-serif;
     text-transform: uppercase;
+    color: transparent;
+    text-shadow: 0 0 1px rgba(201,196,197, 1);
 }
 
 .t-fade {
@@ -122,8 +130,7 @@ body {
 
 /***** Typography *****/
 .t1 {
-    font-size: 38px;
-    transform: scale(1,1.6);
+    font-size: 56px;
 }
 
 .t2 {
@@ -146,7 +153,7 @@ body {
     }
 
     .t1 {
-        font-size: 56px;
+        font-size: 70px;
     }
 
     .c-video {
