--- a/js/pages/home.hbs
+++ b/js/pages/home.hbs
@@ -1,3 +1,3 @@
 <div class="c-video">
-<iframe class="c-video__film c-video__short" src="https://player.vimeo.com/video/267031380?title=0&byline=0&portrait=0&transparent=0&autoplay=1&autopause=0&loop=1" width="640" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe class="c-video__film c-video__short" src="https://player.vimeo.com/video/267031380?title=0&byline=0&portrait=0&transparent=0&autoplay=1&loop=1" width="640" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
